[package]
name = "prqlproxy"
version = "0.1.0"
edition = "2021"
authors = ["JP Moresmau <jp@moresmau.fr>"]
description= "A TCP proxy that can translate PRQL to Postgres SQL"

[dependencies]
anyhow = "1.0.71"
byteorder = "1.4.3"
clap = { version = "4.3.1", features = ["derive"] }
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.18"
prql-compiler = "0.8.1"
tokio = { version = "1.28.2", features = ["net", "io-std", "io-util", "macros", "parking_lot", "rt", "rt-multi-thread", "sync"] }

[dev-dependencies]
tokio-postgres = "0.7.8"
